<resources>
    <string name="app_name">Localiza Endereço</string>
    <string name="digite_o_seu_cep">Digite o seu CEP</string>
    <string name="logradouro">Logradouro:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="ibge">IBGE:</string>
    <string name="estado">Estado:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cep">CEP</string>
</resources>
